--- a/index.html
+++ b/index.html
@@ -70,9 +70,29 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-clinic-medical"></i>
-                        <p>Imagem da nossa clínica</p>
+                    <div class="clinic-carousel">
+                        <div class="carousel-container">
+                            <div class="carousel-slide active">
+                                <img src="images/IMG_5864.jpeg" alt="ZoomZoom Clínica Veterinária - Exterior">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="images/IMG_5866.JPG" alt="ZoomZoom Clínica Veterinária">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="images/IMG_5867.JPG" alt="ZoomZoom Clínica Veterinária">
+                            </div>
+                            <div class="carousel-slide">
+                                <img src="images/IMG_5868.JPG" alt="ZoomZoom Clínica Veterinária">
+                            </div>
+                        </div>
+                        <div class="carousel-dots">
+                            <span class="dot active" data-slide="0"></span>
+                            <span class="dot" data-slide="1"></span>
+                            <span class="dot" data-slide="2"></span>
+                            <span class="dot" data-slide="3"></span>
+                        </div>
+                        <button class="carousel-prev">‹</button>
+                        <button class="carousel-next">›</button>
                     </div>
                 </div>
             </div>
