--- a/pages/contato.html
+++ b/pages/contato.html
@@ -53,7 +53,7 @@
                             </div>
                             <div class="method-info">
                                 <h3>Endereço</h3>
-                                <p>Rua dos Animais, 123 - Centro</p>
+                                <p>Rua dos Animais, 123 - Centro CE</p>
                                 <p>São Paulo - SP, 01234-567</p>
                                 <a href="#" class="map-link">Ver no mapa →</a>
                             </div>
@@ -105,7 +105,7 @@
                                 <div style="text-align: center;">
                                     <i class="fas fa-map" style="font-size: 3rem; margin-bottom: 15px;"></i>
                                     <p>Mapa da nossa localização</p>
-                                    <p style="font-size: 0.9rem; opacity: 0.8;">Rua dos Animais, 123 - Centro - SP</p>
+                                    <p style="font-size: 0.9rem; opacity: 0.8;">Rua dos Animais, 123 - Centro - CE</p>
                                 </div>
                             </div>
                         </div>
